# showcase

./: .gitignore
buildchimp/: buildchimp.py  config.py  lib.py  mainwnd.py  readme.md  setup.py  tabstype.py  taskmanager.py  tasks.py  test.yaml  test_build_cc_osx.yaml  test_build_cc_winxx.yaml  test_scripts.py  testtasks.py  webserver.py  yaml_test.py
buildchimp/py2app/: build.sh  buildchimp.icns  readme.md  setup.py
guesswho/mindmap/: brainstorm.htm  dugong.js  mindmap.htm
who_are_you/libwhoareyou/whoareyou-cli/: CMakeLists.txt  main.cpp  optional.h  people.cpp  people.h
who_are_you/mindmap/: brainstorm.htm
who_are_you/sdl/: CMakeLists.txt  GameTile.cpp  GameTile.h  OtherDrawObjs.cpp  OtherDrawObjs.h  ScopeGuard.h  cairosdl.c  cairosdl.h  gamelogic.cpp  gamelogic.h  main.cpp  main.h
